--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -512,3 +512,92 @@ footer .store-phone {
     margin: 20px auto;
     color: #000
 }
+
+/* FORM*/
+#form-container {
+    background-color: #FFF;
+    border-radius: 20px;
+    box-shadow: .5px 10px 15px rgba(0, 0, 0, .2);
+    margin: 25px auto;
+    padding: 25px;
+    color:#000;
+}
+
+@media(min-width: 768px) {
+    #form-container {
+        margin: 50px auto;
+        padding: 50px;
+    }
+}
+
+#form-container h2 {
+    font-weight: 900px;
+    margin-bottom: 30px;
+}
+
+#form-container a {
+    color: #222;
+    transition: .5s;
+}
+
+#form-container a:hover {
+    color: var(--primary-color);
+}
+
+#form-container form {
+    padding-bottom: 50px;
+}
+
+#form-container .form-control {
+    border: none;
+    border-bottom: 1px solid #CCC;
+    border-radius: 0;
+}
+
+#form-container .form-control:focus {
+    box-shadow: none;
+}
+
+#form-container .form-floating label {
+    color: var(--light-color);
+}
+
+#form-container .form-floating > .form-control:focus label {
+    color: #222;
+}
+
+#form-container input[type="submit"],
+#form-container input[type="checkbox"]:checked {
+    background-color: var(--primary-color);
+    border-color: var(--primary-color);
+}
+
+.btn.btn-primary {
+    width: 100%;
+    margin-top: 25px;
+}
+
+@media(min-width: 768px) {
+    .btn.btn-primary {
+        width: auto;
+    }
+}
+
+/* IMAGE */
+
+.row-aling-items-center {
+    align-content: center;
+    height: 100%;
+    padding: 75px 0;
+}
+
+@media(min-width: 768px) {
+    .col-md-6.order-md-1 {
+        padding-top: 50px;
+    }
+}
+
+#link-container {
+    text-align: center;
+    padding-top: 50px;
+}
